feat[#6]: 태그 하나만 가진 shop의 태그 삭제시 예외 발생 기능